V2 With Slides waiting for images, index page still incomplete
Co-authored-by: Krishna S <haxthehacc@users.noreply.github.com>
Co-authored-by: Noel <NJWasTaken@users.noreply.github.com>
Co-authored-by: Karthikeya Machiraju <0Shunya0@users.noreply.github.com>
Co-authored-by: Laxman Srivastava <laxmanclo@users.noreply.github.com>
Co-authored-by: Pranav Hemanth <Pranavh-2004@users.noreply.github.com>

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -112,7 +112,7 @@ body {
 
 /* Specific styles for the first about area */
 .black_bg1 {
-  background-color: #0a1835; /* Dark blue background */
+  background-color: rgb(10, 24, 53); /* Dark blue background */
 }
 
 /* Specific styles for the second about area */
