--- a/templates/Program.html
+++ b/templates/Program.html
@@ -79,7 +79,7 @@
 
      <!-- bradcam_area -->
      <div class="bradcam_area">
-        <div class="single_bradcam  d-flex align-items-center bradcam_bg_1 overlay">
+        <div class="single_bradcam  d-flex align-items-center bradcam_bg_1 overlay" style="background-image: url('/static/img/banner/footer_banner.png');">
               <div class="container">
                     <div class="row align-items-center justify-content-center">
                        <div class="col-xl-12">
@@ -118,7 +118,7 @@
                                 <div class="performer_heading" >
                                     <h4>Narrative Nexus (AI Image Generation + Story Writing)
                                     </h4>
-                                    <span>Unleash your creativity by writing a scientific story and bringing it to life with AI-generated images at our innovative event!
+                                    <span>Unleash your creativity by writing a scientific story and bringing it to life with AI-generated images! Immerse yourself in a world of imagination, storytelling, and cutting-edge technology. Join us for an unforgettable experience at our innovative event!
 
                                         <br><br>&#x2022;Number of participants - 300
                                         <br>&#x2022;Number of teams - 100
@@ -150,7 +150,9 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>HackaScratch ( HACKATHON (SCRATCH) )</h4>
-                                    <span>Unleash your creativity and coding skills in our Scratch Hackathon, where innovation meets fun!
+                                    <span>Unleash your coding wizardry and creative genius in this high-octane hackathon. Dive into a world of algorithms, logic, and innovation as you race against the clock to develop groundbreaking solutions.
+
+
 
                                         <br><br>&#x2022;Number of participants - 228
                                         <br>&#x2022;Number of teams - 76
@@ -166,7 +168,8 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Jeopardy</h4>
-                                    <span>Test your knowledge and compete for prizes in our thrilling Jeopardy showdown!
+                                    <span>Test your knowledge across various domains in this electrifying quiz competition. From science and technology to pop culture and beyond, Jeopardy will challenge your brain and keep you on the edge of your seat.
+
                                         <br><br>&#x2022;Number of participants - 200
                                         <br>&#x2022;Number of teams - 50
                                         <br>&#x2022;Number of people in one team - 4</span>
@@ -180,7 +183,7 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>(1)Engineering the Future : Bridge Edition</h4>
-                                    <span>Engineer your path to victory in our ultimate bridge-building challenge!
+                                    <span>Engineer your way to victory in our bridge-building challenge! Construct a sturdy bridge using provided materials and showcase your engineering skills. Work with your team to create a structure that can withstand the weight test. Join us at TAMS 2024 to put your skills to the test!
                                         <br><br>&#x2022;Number of participants - 180
                                         <br>&#x2022;Number of teams - 60
                                         <br>&#x2022;Number of people in one team - 3</span>
@@ -194,8 +197,7 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>(1)Engineering the Future : Car Edition</h4>
-                                    <span>Rev up your creativity and design your own car in our exciting car-making workshop
-                                        cum competition!
+                                    <span>Get ready to rev up your creativity! Join our car-making workshop and design your own unique car. Use a variety of materials to bring your design to life, and then test it in a thrilling competition. Show off your innovation and race to victory at TAMS 2024!
                                         <br><br>&#x2022;Number of participants - 240
                                         <br>&#x2022;Number of teams - 60
                                         <br>&#x2022;Number of people in one team - 4
@@ -209,7 +211,7 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>(3)Engineering the Future : AeroQuest (Rocketry)</h4>
-                                    <span>Embark on a journey to the cosmos with our thrilling rocketry adventure!
+                                    <span>Embark on a journey to the cosmos with our thrilling rocketry adventure! Design and launch your own rockets, learn about the wonders of space, and compete in exciting challenges. Join us for an out-of-this-world experience at TAMS 2024!
                                         <br><br>&#x2022;Number of participants - 216
                                         <br>&#x2022;Number of teams - 72
                                         <br>&#x2022;Number of people in one team - 3</span>
@@ -223,7 +225,7 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Science Carnival - Science Symposium</h4>
-                                    <span>Explore the magic of science at our exhilarating science carnival!
+                                    <span>Step right up and experience the thrill of our science carnival! Dive into hands-on experiments, mind-bending demonstrations, and interactive exhibits. Unleash your inner scientist and join us for a day of fun and discovery at TAMS 2024!
                                         <br><br>&#x2022;25 stalls for model showcasing
                                         for the events and games - unlimited!
                                         </span>
@@ -237,8 +239,8 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>RoboChem Conundrum - ESCAPE ROOM</h4>
-                                    <span>Delve into the fusion of chemistry and robotics in our mind-bending escape room
-                                        experience!
+                                    <span> Put your chemistry knowledge to the test in the RoboChem Conundrum! Solve chemical puzzles, unlock clues, and escape before time runs out in this thrilling escape room experience. Gather your friends, collaborate, and use your chemistry skills to outsmart the room. Can you unravel the mysteries and escape in time?
+
                                         <br><br>&#x2022;Number of participants - 240
                                         <br>&#x2022;Number of teams - 60
                                         <br>&#x2022;Number of people in one team - 4</span>
