--- a/templates/index.html
+++ b/templates/index.html
@@ -43,8 +43,7 @@
                             <div class="col-xl-3 col-lg-3">
                                 <div class="logo_png">
                                     <a href="/">
-                                        <img src="static/img/about/something.png" alt="" width="120
-">
+                                        <img src="static/img/about/something.png" alt="" width="120">
                                     </a>
                                 </div>
                             </div>
@@ -82,7 +81,7 @@
 <!-- slider_area_start -->
 <!-- slider_area_start -->
 <div class="slider_area">
-    <div class="single_slider d-flex align-items-center slider_bg_1 overlay">
+    <div class="single_slider d-flex align-items-center" style="background-image: url('/static/img/logo_png.png');">
         <div class="container">
             <div class="row align-items-center justify-content-center">
                 <div class="col-xl-12">
@@ -103,22 +102,75 @@
     </div>
 </div>
 <!-- slider_area_end -->
+<div class="brand_area black_bg">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="section_title text-center mb-80">
+                    <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Slides</h4>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="brand_wrap">
+                    <div class="brand_active owl-carousel">
+                        <div class="single_brand text-center">
+                            <img src="static/img/brand/1.JPG" alt="">
+                        </div>
+                        <div class="single_brand text-center">
+                            <img src="static/img/brand/2.JPG" alt="">
+                        </div>
+                        <div class="single_brand text-center">
+                            <img src="static/img/brand/3.JPG" alt="">
+                        </div>
+                        <div class="single_brand text-center">
+                            <img src="static/img/brand/4.JPG" alt="">
+                        </div>
+                        <div class="single_brand text-center">
+                            <img src="static/img/brand/5.jpg" alt="">
+                        </div>
+                        <div class="single_brand text-center">
+                            <img src="static/img/brand/6.JPG" alt="">
+                        </div>
+                        <div class="single_brand text-center">
+                            <img src="static/img/brand/7.jpg" alt="">
+                        </div>
+                        <div class="single_brand text-center">
+                            <img src="static/img/brand/8.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- slider_area_end -->
 
 <!-- collabrtor s--shunya00 -->
 
 <!-- about_area_start  -->
 <div class="about_area black_bg ">
     <div class="container ">
-        
+        <h3></h3>
         <div class="row justify-content-center">
             <div class="col-lg-8 ">
                 <div class="section_title text-center mb-80">
-                    <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TAMS: Where Science Meets Fun and Innovation!</h3>
-                    <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">🔬 Unleash Your Inner Scientist and Innovator: Dive into the exciting world of TAMS and let your curiosity and creativity soar! 
-                        🚀 Join the Adventure: This nationwide event brings together students from grades 8 to 12 across India for an epic journey of discovery and management skills.<br>
-                        🌟 Explore, Innovate, Collaborate: Show off your scientific and managerial talents, make new friends, and create projects that could change the world.<br>
-                        🎉 Be a Part of the Excitement: Whether you're a budding scientist, a curious experimenter, a future tech genius, or a management whiz, TAMS is the place to shine!
+              
+                    <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
+                        TAMS: Where Science Meets Fun and Innovation!</h3>
+    
+                    
+                    <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">Step into The Amateur Manager and Scientist (TAMS), where passion meets innovation! Join us for an exciting journey through the realms of science and management, designed to inspire and challenge amateur enthusiasts. This year, we're bringing together the brightest minds from grades 8 to 12 from various institutions across India. Get ready for an unforgettable experience filled with learning, competition, and collaboration.<br>
+
+                        TAMS is more than just an event—it's a celebration of creativity and ingenuity. Engage in thought-provoking discussions, participate in hands-on workshops, and showcase your talents in our various competitions. Connect with like-minded peers, mentors, and industry experts who share your passion for science and management.<br>
+                        
+                        Join us at TAMS 2024 and discover a universe of possibilities. See you there!
                         </p>
+                    </h3>
+                        
                 </div>
             </div>
             
@@ -138,11 +190,12 @@
             <div class="col-lg-12">
                 <div class="section_title text-center mb-80">
                     <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Event Highlight</h3>
-                    <div class="video_container wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s" style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;background:#000;">
+                    <div class="video_container wow fadeInUp " data-wow-duration="1s" data-wow-delay=".4s" style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;background:#000;">
                         <iframe style="position:absolute;top:0;left:0;width:100%;height:100%;" src="https://www.youtube.com/embed/6j0ssb_ZJos?controls=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
                     </div>                     
                     <div class="text_content wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s" style="color: white; text-align: center; margin-top: 20px;">
-                        <p>This event regularly attracts a diverse range of attendees from around the world, across different professions, and with different levels of experience. Join us for an unforgettable experience!</p>
+                        <p>Experience the buzz and excitement of TAMS 2024 with our event highlight video. Get a sneak peek into the incredible projects, activities, and moments that await you at this year's fest. Whether you're a science whiz, a future business tycoon, or simply curious about the world of innovation, this video is a must-watch.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -158,12 +211,12 @@
         <div class="row justify-content-center">
             <div class="col-lg-8">
                 <div class="section_title text-center mb-80">
-                    <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">🌟 TAMS is Back and Better Than Ever!</h3>
-                    <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">🌟 TAMS is Back and Better Than Ever! 🎉 Bigger, Better, and More Exciting: 🌟🔬💼 The Amateur Scientist and The Amateur Manager have joined forces and rebranded as The Amateur Manager and Scientist (TAMS), bringing you an event like never before! 🌟🔬💼<br>
-                        🔬 Epic Science & Management Fest by PES Institutions: 🎓✨ This premier event brings together the brightest student projects from grades 8 to 12 across India, merging groundbreaking scientific discoveries with cutting-edge management strategies. 🌍🔍📊<br>
-                        ✨ Celebrate Innovation and Excellence: Get ready to explore, create, and collaborate in an electrifying environment that celebrates the best of science and management. Show off your scientific experiments and management prowess, and discover new ways to solve real-world problems! 🌟💡<br>
-                        
+                    <img src="static/img/1&2.png" alt="" width="170">
+                    <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TAMS is Back <br>and Better Than Ever!</h3>
+                    <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">TAMS is back and ready to rock your world! This year promises to be bigger, better, and more mind-blowing than ever before. With a plethora of events and activities designed to tickle your brain cells and ignite your creativity, TAMS 2024 is the place to be. Join us in celebrating the spirit of innovation and collaboration. Get ready to explore new ideas, create groundbreaking projects, and connect with like-minded peers
                         </p>
+                        
+                    </div>
                 </div>
             </div>
         </div>
@@ -319,6 +372,41 @@
     }
     google.maps.event.addDomListener(window, 'load', initMap);
 </script>    <!-- JS here -->
+
+<script>
+    // Load the IFrame Player API code asynchronously.
+    var tag = document.createElement('script');
+    tag.src = "https://www.youtube.com/player_api";
+    var firstScriptTag = document.getElementsByTagName('script')[0];
+    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+    // Replace the 'ytplayer' element with an <iframe> and
+    // YouTube player after the API code downloads.
+    var player;
+    function onYouTubePlayerAPIReady() {
+      player = new YT.Player('ytplayer', {
+        height: '390',
+        width: '640',
+        playerVars : {
+              autoplay : 0
+          },
+        videoId: 'M7lc1UVf-VE'
+      });
+    }
+
+    $(window).scroll(function() {
+      $("iframe").each( function() {
+          if( $(window).scrollTop() > $(this).offset().top - 200 ) {
+              $(this).css('opacity',1);
+              player.playVideo();
+          } else {
+              $(this).css('opacity',0);
+              player.stopVideo();
+          }
+      }); 
+  });
+
+  </script>
     <script src="static/js/vendor/modernizr-3.5.0.min.js"></script>
     <script src="static/js/vendor/jquery-1.12.4.min.js"></script>
     <script src="static/js/popper.min.js"></script>
