--- a/templates/venue.html
+++ b/templates/venue.html
@@ -78,7 +78,7 @@
 
      <!-- bradcam_area -->
      <div class="bradcam_area">
-        <div class="single_bradcam  d-flex align-items-center bradcam_bg_1 overlay">
+        <div class="single_bradcam  d-flex align-items-center bradcam_bg_1 overlay" style="background-image: url('/static/img/banner/footer_banner.png');">
               <div class="container">
                     <div class="row align-items-center justify-content-center">
                        <div class="col-xl-12">
