Added Events but no footer

--- a/templates/Program.html
+++ b/templates/Program.html
@@ -179,7 +179,7 @@
                         <div class="col-lg-6 col-md-6" id="EnggFuture">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div  data-tilt class="thumb">
-                                    <img src="static/img/performer/4.png" alt="">
+                                    <img src="static/img/performer/5.png" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>(1)Engineering the Future : Bridge Edition</h4>
@@ -193,7 +193,7 @@
                         <div class="col-lg-6 col-md-6">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div  data-tilt class="thumb">
-                                    <img src="static/img/performer/4.png" alt="">
+                                    <img src="static/img/performer/1.png" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>(1)Engineering the Future : Car Edition</h4>
@@ -207,7 +207,7 @@
                         <div class="col-lg-6 col-md-6">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div  data-tilt class="thumb">
-                                    <img src="static/img/performer/4.png" alt="">
+                                    <img src="static/img/performer/1.png" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>(3)Engineering the Future : AeroQuest (Rocketry)</h4>
@@ -221,7 +221,7 @@
                         <div class="col-lg-6 col-md-6" id="ScienceSymposium">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div  data-tilt class="thumb">
-                                    <img src="static/img/performer/4.png" alt="">
+                                    <img src="static/img/performer/1.png" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Science Carnival - Science Symposium</h4>
@@ -235,7 +235,7 @@
                         <div class="col-lg-6 col-md-6" id="RoboChem">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div  data-tilt class="thumb">
-                                    <img src="static/img/performer/4.png" alt="">
+                                    <img src="static/img/performer/1.png" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>RoboChem Conundrum - ESCAPE ROOM</h4>
@@ -244,6 +244,127 @@
                                         <br><br>&#x2022;Number of participants - 240
                                         <br>&#x2022;Number of teams - 60
                                         <br>&#x2022;Number of people in one team - 4</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6" id="Mono">
+                            <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
+                                <div  data-tilt class="thumb">
+                                    <img src="static/img/performer/6.png" alt="">
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Monopoly Madness</h4>
+                                    <span> Description
+
+                                        <br><br>&#x2022;Number of participants - 
+                                        <br>&#x2022;Number of teams - 
+                                        <br>&#x2022;Number of people in one team - </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6" id="Sherlock">
+                            <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
+                                <div  data-tilt class="thumb">
+                                    <img src="static/img/performer/7.png" alt="">
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Operation Sherlock</h4>
+                                    <span> Description
+
+                                        <br><br>&#x2022;Number of participants - 
+                                        <br>&#x2022;Number of teams - 
+                                        <br>&#x2022;Number of people in one team - </span>
+                                </div>
+                            </div>
+                        </div>
+            
+                        <div class="col-lg-6 col-md-6" id="Hand">
+                            <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
+                                <div  data-tilt class="thumb">
+                                    <img src="static/img/performer/8.png" alt="">
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>The Hidden Hand</h4>
+                                    <span> Description
+
+                                        <br><br>&#x2022;Number of participants - 
+                                        <br>&#x2022;Number of teams - 
+                                        <br>&#x2022;Number of people in one team - </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6" id="Edge">
+                            <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
+                                <div  data-tilt class="thumb">
+                                    <img src="static/img/performer/9.png" alt="">
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Invester's Edge</h4>
+                                    <span> Description
+
+                                        <br><br>&#x2022;Number of participants - 
+                                        <br>&#x2022;Number of teams - 
+                                        <br>&#x2022;Number of people in one team - </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6" id="Shark">
+                            <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
+                                <div  data-tilt class="thumb">
+                                    <img src="static/img/performer/10.png" alt="">
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Shark Tank</h4>
+                                    <span> Description
+
+                                        <br><br>&#x2022;Number of participants - 
+                                        <br>&#x2022;Number of teams - 
+                                        <br>&#x2022;Number of people in one team - </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6" id="Stories">
+                            <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
+                                <div  data-tilt class="thumb">
+                                    <img src="static/img/performer/11.png" alt="">
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>House Of Stories</h4>
+                                    <span> Description
+
+                                        <br><br>&#x2022;Number of participants - 
+                                        <br>&#x2022;Number of teams - 
+                                        <br>&#x2022;Number of people in one team - </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6" id="Eureka">
+                            <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
+                                <div  data-tilt class="thumb">
+                                    <img src="static/img/performer/12.png" alt="">
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Eureka Expo</h4>
+                                    <span> Description
+
+                                        <br><br>&#x2022;Number of participants - 
+                                        <br>&#x2022;Number of teams - 
+                                        <br>&#x2022;Number of people in one team - </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6" id="Entertainer">
+                            <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
+                                <div  data-tilt class="thumb">
+                                    <img src="static/img/performer/13.png" alt="">
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>The Entertainer</h4>
+                                    <span> Description
+
+                                        <br><br>&#x2022;Number of participants - 
+                                        <br>&#x2022;Number of teams - 
+                                        <br>&#x2022;Number of people in one team - </span>
                                 </div>
                             </div>
                         </div>
