--- a/templates/Program.html
+++ b/templates/Program.html
@@ -299,7 +299,7 @@
                                     <img src="static/img/performer/9.png" alt="">
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>Invester's Edge</h4>
+                                    <h4>Investor's Edge</h4>
                                     <span> Description
 
                                         <br><br>&#x2022;Number of participants - 
